modify text field popup scrollbar issue fixed

--- a/src/assets/scss/customize/customize.scss
+++ b/src/assets/scss/customize/customize.scss
@@ -3447,3 +3447,11 @@ a {
         }
     }
 }
+
+.scrollable {
+    &.more-fields-popup {
+        max-height: 300px;
+        height: auto;
+        margin-bottom: 10px;
+    }
+}
